feat: dashboard controller
